[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Arunkumar Nair <arunkg99@gmail.com>"]
readme = "README.md"
packages = [{include = "utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
